fixing actions spacing on modal

--- a/src/components/Modal/style.scss
+++ b/src/components/Modal/style.scss
@@ -70,3 +70,13 @@
 .content {
   @extend %layout--bounds;
 }
+
+.pageActions {
+  display: flex;
+  *  {
+    margin-right: 20px;
+  }
+  :last-child {
+    margin-right: 0;
+  }
+}
